<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.android.flashbackmusicv000.AlbumSongList"
    tools:showIn="@layout/activity_album_song_list">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#d77979"
        android:gravity="center"
        android:text="@string/songs"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="50dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/constraintLayout">

        </android.support.constraint.ConstraintLayout>

    </ScrollView>


    <TextView
        android:id="@+id/flashtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="VIBE MODE"
        android:textSize="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/flashSwitch"
        app:layout_constraintVertical_bias=".97"
        app:layout_constraintHorizontal_bias=".4"
        />

    <Switch
        android:id="@+id/flashSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/flashtext"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias=".97"

        />
</android.support.constraint.ConstraintLayout>