<resources>
    <string name="app_name">FlashbackMusicV000</string>
    <string name="playSongs">SONGS PLAYING</string>
    <string name="playAlbum">ALBUM PLAYING</string>
    <string name="action_settings">Settings</string>
    <string name="songs">SONGS</string>
    <string name="albums">ALBUMS</string>
    <string name="flash">FLASHBACK MODE</string>
    <string name="title_activity_song_playing">SongPlayingActivity</string>
    <string name="favorited">✓</string>
    <string name="disliked">ｘ</string>
    <string name="neutral">+</string>
...
